@startuml
!include ../../styles.puml
'https://plantuml.com/class-diagram

title Factory Method Design Pattern Documentation

header
    The Factory Method Pattern defines an interface for creating an object,
    but lets subclasses decide which class to instantiate. It allows a class
    to defer instantiation to subclasses, promoting loose coupling and
    extensibility.
endheader

abstract class Document {
    {abstract} {field} extension
    {abstract} {method} render()
    - {method} new(cls, *args, **kwargs}
    - {method} init(self, *args, **kwargs}
}
class Txt {
    {method} render()
}
class Pdf {
    {method} render()
}
class Html {
    {method} render()
}

Document <|-- Txt
Document <|-- Pdf
Document <|-- Html

abstract class Localizer {
    {abstract} {method} localize(msg: str)
}

class SpanishLocalizer {
}

class EnglishLocalizer {
}

Localizer <|-- SpanishLocalizer
Localizer <|-- EnglishLocalizer

abstract class LocalizerFactory {
    {abstract} {method} create_localizer()
}

class SpanishLocalizerFactory {
}

class EnglishLocalizerFactory {
}

LocalizerFactory <|-- SpanishLocalizerFactory
LocalizerFactory <|-- EnglishLocalizerFactory

@enduml